Masonry fix
Stopped working properly, still broken in FF and not perfect in Chrome

--- a/src/css/natuive-grid.scss
+++ b/src/css/natuive-grid.scss
@@ -356,6 +356,7 @@ section:before, section:after { // Prevent inner edge margins from creating blan
     .masonry > * {
 
         display: inline-block; // Unwanted wrapping in Chrome – 2 instead of 3 columns
+        display: table; // Unwanted wrapping in Chrome – 2 instead of 3 columns
 		margin: 0 $line-height-em $line-height-em $line-height-em;
         width: calc(100% - #{$line-height-em}*2);
         -webkit-column-break-inside: avoid;
